// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Meta /> > should match snapshot with label, icon for Primary variant 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <span
    class="sprinkles_alignItems_center_mobile__onxwju102 sprinkles_display_flex_mobile__onxwjufa sprinkles_flexDirection_row_mobile__onxwju132 sprinkles_flexWrap_nowrap_mobile__onxwju146 sprinkles_gap_2_mobile__onxwjuua sprinkles_justifyContent_start_mobile__onxwju12a"
  >
    <span
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuf2 Icon_makeResponsiveStyle_key_bp__1gy3ire0 Meta_variant_primary__5jk44p0"
      data-od-component="icon"
    >
      <svg
        aria-hidden="true"
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuf2 sprinkles_width_full_mobile__onxwjut2 sprinkles_height_full_mobile__onxwjur2"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
        />
      </svg>
    </span>
    <span
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjuju sprinkles_lineHeight_4_mobile__onxwjuhy sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338"
    >
      Hello World!
    </span>
  </span>
</div>
`;

exports[`<Meta /> > should match snapshot with label, icon for Secondary variant 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <span
    class="sprinkles_alignItems_center_mobile__onxwju102 sprinkles_display_flex_mobile__onxwjufa sprinkles_flexDirection_row_mobile__onxwju132 sprinkles_flexWrap_nowrap_mobile__onxwju146 sprinkles_gap_2_mobile__onxwjuua sprinkles_justifyContent_start_mobile__onxwju12a"
  >
    <span
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuf2 Icon_makeResponsiveStyle_key_bp__1gy3ire0 Meta_variant_secondary__5jk44p1"
      data-od-component="icon"
    >
      <svg
        aria-hidden="true"
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuf2 sprinkles_width_full_mobile__onxwjut2 sprinkles_height_full_mobile__onxwjur2"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
        />
      </svg>
    </span>
    <span
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  typography_common__yhjp33f sprinkles_fontSize_4_mobile__onxwjuju sprinkles_lineHeight_4_mobile__onxwjuhy sprinkles_fontWeight_normal__onxwjue4 typography_color_neutral__yhjp338"
    >
      Hello World!
    </span>
  </span>
</div>
`;
